Implemented "texturing", loading them into momry, rendering player, instantiating and destroying simple obstacle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(racer CXX)
 
 cmake_minimum_required(VERSION 3.16)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 
 SET(GCC_COVERAGE_COMPILE_FLAGS "-O1 -Wall")
 SET(GCC_COVERAGE_LINK_FLAGS "-lrt -lpthread")
@@ -10,8 +10,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
 
 SET(MZAPO
-        lib/include/mzapo_parlcd.h src/renderer/mzapo/mzapo_parlcd.c
-        lib/include/mzapo_phys.h src/renderer/mzapo/mzapo_phys.c
+        lib/include/mzapo_parlcd.h src/graphics/renderer/mzapo/mzapo_parlcd.c
+        lib/include/mzapo_phys.h src/graphics/renderer/mzapo/mzapo_phys.c
         lib/include/mzapo_regs.h
         )
 
@@ -27,7 +27,7 @@ SET(LIB_HEADERS
 add_executable(racer
         ${OBJS} ${LIB_HEADERS}
         src/main.cpp
-        src/behaviour/behaviour.h src/behaviour/behaviour.cpp
+        src/components/component.h src/components/component.cpp
         src/output/printing.cpp src/output/printing.h
         src/scenes/main_menu.cpp src/scenes/main_menu.h
         src/scenes/car_selection.cpp src/scenes/car_selection.h
@@ -35,14 +35,23 @@ add_executable(racer
         src/application/application.cpp src/application/application.h
         src/io/input.h src/io/input.cpp
         src/scenes/track.cpp src/scenes/track.h src/scenes/game_over.cpp src/scenes/game_over.h
-        src/renderer/renderer.cpp src/renderer/renderer.h
+        src/graphics/renderer/renderer.cpp src/graphics/renderer/renderer.h
         src/io/screen.cpp src/io/screen.h
-        src/renderer/graphics/graphics.cpp src/renderer/graphics/graphics.h
+        src/graphics/graphics.cpp src/graphics/graphics.h
         src/io/async_input.cpp src/io/async_input.h
         src/exceptions/exceptions.h src/exceptions/exceptions.cpp
+        src/scenes/track/track_manager.cpp src/scenes/track/track_manager.h
+        src/scenes/track/player.cpp src/scenes/track/player.h
+        src/components/renderable.cpp src/components/renderable.h
+        src/scenes/track/obstacle.cpp src/scenes/track/obstacle.h
+        src/game_data/game_data.cpp src/game_data/game_data.h
+        src/graphics/textures/textures.cpp src/graphics/textures/textures.h
+        src/math/math.cpp src/math/math.h
         )
 
-target_include_directories(racer PRIVATE lib/include)
+target_include_directories(racer PRIVATE
+        lib/include
+        src/components src/exceptions src/output src/graphics textures src/math)
 
 SET_SOURCE_FILES_PROPERTIES(
         ${OBJS}
@@ -61,16 +70,15 @@ string(SUBSTRING ${target_dir} 0 ${len} target_dir)
 
 set(target_dir "/tmp/${target_dir}")
 
-execute_process(COMMAND pwd OUTPUT_VARIABLE src/output)
-
 set(ssh_options "-i /opt/zynq/ssh-connect/mzapo-root-key")
 set(address "root@${target_ip}")
 
 add_custom_command(TARGET racer POST_BUILD
-        COMMAND echo "built"
-        COMMAND ssh -i /opt/zynq/ssh-connect/mzapo-root-key -t ${address} killall gdbserver 1>/dev/null 2>/dev/null || true
-        COMMAND echo "killed dgbserver"
-        COMMAND ssh -i /opt/zynq/ssh-connect/mzapo-root-key -t ${address} mkdir -p ${target_dir}
-        COMMAND echo "created temporary directory"
+        COMMAND echo "Built. Transferring to device."
+        # Do some magic
+        COMMAND ssh -i /opt/zynq/ssh-connect/mzapo-root-key -t ${address} killall gdbserver 1>/dev/null 2>/dev/null || true && mkdir -p ${target_dir}
+        # Copy executable
         COMMAND scp -i /opt/zynq/ssh-connect/mzapo-root-key ${PROJECT_NAME} ${address}:${target_dir}/${PROJECT_NAME}
-        COMMAND echo "copied executable")
+        # Copy dependent textures
+        COMMAND scp -i /opt/zynq/ssh-connect/mzapo-root-key -r ${CMAKE_SOURCE_DIR}/textures/binary ${address}:${target_dir}/textures
+        COMMAND echo "Transfer successful.")
