Added documentation, minor refactoring. Hope the game does not break!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(racer CXX)
 cmake_minimum_required(VERSION 3.16)
 
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_COMPILER /bin/arm-linux-gnueabihf-g++)
 
 SET(GCC_COVERAGE_COMPILE_FLAGS "-O1 -Wall")
 SET(GCC_COVERAGE_LINK_FLAGS "-lrt -lpthread")
@@ -11,8 +12,7 @@ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}
 
 SET(SRC
         src/main.cpp
-        src/components/component.h src/components/component.cpp
-        src/output/printing.cpp src/output/printing.h
+        src/printing/printing.cpp src/printing/printing.h
         src/scenes/main_menu.cpp src/scenes/main_menu.h
         src/scenes/car_selection.cpp src/scenes/car_selection.h
         src/scenes/scenes.cpp src/scenes/scenes.h
@@ -20,13 +20,10 @@ SET(SRC
         src/io/input.h src/io/input.cpp
         src/scenes/track.cpp src/scenes/track.h src/scenes/game_over.cpp src/scenes/game_over.h
         src/graphics/renderer/renderer.cpp src/graphics/renderer/renderer.h
-        src/io/screen.cpp src/io/screen.h
-        src/graphics/graphics.cpp src/graphics/graphics.h
+        src/graphics/graphics.h
         src/io/async_input.cpp src/io/async_input.h
-        src/exceptions/exceptions.h
         src/scenes/track/track_manager.cpp src/scenes/track/track_manager.h
         src/scenes/track/player.cpp src/scenes/track/player.h
-        src/components/renderable.cpp src/components/renderable.h
         src/game_data/game_data.cpp src/game_data/game_data.h
         src/graphics/textures/textures.cpp src/graphics/textures/textures.h
         src/math/math.cpp src/math/math.h
@@ -58,7 +55,7 @@ add_executable(racer
 
 target_include_directories(racer PRIVATE
         lib/include src/game_data
-        src/components src/exceptions src/output src/graphics src/math src/io src/graphics/textures)
+        src/components src/printing src/graphics src/math src/io src/graphics/textures)
 
 SET_SOURCE_FILES_PROPERTIES(
         ${OBJS}
@@ -66,7 +63,23 @@ SET_SOURCE_FILES_PROPERTIES(
         EXTERNAL_OBJECT true
         GENERATED true)
 
-SET(target_ip 192.168.202.213)
+SET(ips
+        192.168.202.203
+        192.168.202.212
+        192.168.202.207
+        192.168.202.127
+        192.168.202.211
+        192.168.202.204
+        192.168.202.213
+        192.168.202.209)
+
+# Either set board here manually, or pass by argument cmake -DTARGET_BOARD=...
+#SET(TARGET_BOARD 5)
+
+# Sets target board to connect to
+list(GET ips ${TARGET_BOARD} target_ip)
+message("Using board ${TARGET_BOARD} at ${target_ip}.")
+
 SET(target_user root)
 execute_process(COMMAND whoami OUTPUT_VARIABLE target_dir)
 
@@ -81,7 +94,7 @@ set(ssh_options "-i /opt/zynq/ssh-connect/mzapo-root-key")
 set(address "root@${target_ip}")
 
 add_custom_command(TARGET racer POST_BUILD
-        COMMAND echo "Built. Transferring to device."
+        COMMAND echo "Built. Transferring to device ${TARGET_BOARD} at ${target_ip}."
         # Do some magic
         COMMAND ssh -i /opt/zynq/ssh-connect/mzapo-root-key -t ${address} killall gdbserver 1>/dev/null 2>/dev/null || true
         COMMAND ssh -i /opt/zynq/ssh-connect/mzapo-root-key ${address} mkdir -p ${target_dir}
