--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.obj
 *.elf
 
-# Linker output
+# Linker printing
 *.ilk
 *.map
 *.exp
@@ -131,5 +131,6 @@ sensitive
 *.sh
 
 # Generated binary textures
-textures/binary
-textures/fonts/binary
+#textures/binary
+#textures/fonts/binary
+!run_board.sh
